--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,7 +31,8 @@
 
 en:
   hello: "Hello world"
-  	pagination:
+  views:
+    pagination:
       previous: "&lt; Previous"
       next: "Next &gt;"
       truncate: "..."
